--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ position: absolute;
     lefr: 30px;
 }
     </style>
-	    <link rel="manifest" href="/manifest.json" />
+	    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.2/sweetalert2.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.26.2/sweetalert2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
